# spaghetti

./: .gitmodules  CMakeLists.txt
Spaghetti/: .clang-format  app.cpp  app.h  main.cpp  processor.cpp  processor.h  webgpu_impl.cpp
webgpu/: CMakeLists.txt
